--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Development
-NEXT_PUBLIC_BASE_API_URL=http://194.238.23.134:8000/
+NEXT_PUBLIC_BASE_API_URL= //use your api here..//
 NEXT_PUBLIC_BASE_FILE_URL=http://localhost:3333
  
 # Production
